2005-02-03  Mark McLoughlin  <mark@skynet.ie>

	* lib/storage.py: change things about a bit so that
	it creates its own temprary install directory.
	Add ProfileStorage::uninstall()
	Rename ProfileStorage::get_directory() to
	ProfileStorage::get_install_path()

	* admin-tool/monitorwindow.py,
	  admin-tool/sabayon.py,
	  lib/README.storage,
	  lib/protosession.py,
	  lib/sources/filessource.py,
	  lib/sources/gconfsource.py,
	  lib/userprofile.py: update for above change.
	
	* lib/sources/mozillasource.py: get_source() takes
	a ProfileStorage not profile_path

2005-02-03  Mark McLoughlin  <mark@skynet.ie>

	* admin-tool/profilesdialog.py: start implementing
	profiles manager dialog.
	
	* admin-tool/sabayon.glade: add profiles dialog.
	
	* lib/Makefile.am, lib/config.py.in: add some more
	variables.
	
	* lib/protosession.py: move some variables to config.py

2005-02-02  Mark McLoughlin  <mark@skynet.ie>

	* lib/protosession.py: apply the profile before
	launching the session.
	
	* lib/storage.py: don't throw an exception if asked
	to install when the profile doesn't yet exist.
	
	* lib/userprofile.py: don't ignore exceptions from
	ProfileStorage.install()

2005-02-02  Mark McLoughlin  <mark@skynet.ie>

	* lib/storage.py: test adding a new file after
	installing.

2005-02-02  Mark McLoughlin  <mark@skynet.ie>

	* README: add bit about bug #154779
	
	* lib/storage.py:
	(print_exception): remove, unused.
	(ProfileStorage.__init__): add directory to constructor.
	Doesn't make sense for it to default to the home directory.
	(ProfileStorage.__get_metadata_description): accessor
	for description.
	(ProfileStorage.__get_file_info): build the tuple to be
	returned from update_all(), info_all() and install()
	(ProfileStorage.__get_asb_filename): rename to
	__get_abs_filename()
	(ProfileStorage.update_all): allow for a file that was
	added after installation.
	(run_unit_tests): re-work so we don't use the home dir,
	not spew debugging, test things a bit more and crap out