@@ -1,5 +1,10 @@
 2005-02-03  Mark McLoughlin  <mark@skynet.ie>
 
+	* admin-tool/profilesdialog.py,
+	  admin-tool/sabayon.glade: add a "New Profile" dialog.
+
+2005-02-03  Mark McLoughlin  <mark@skynet.ie>
+
 	* lib/storage.py: change things about a bit so that
 	it creates its own temprary install directory.
 	Add ProfileStorage::uninstall()
